# MM-control-01

./: .gitignore  .travis.yml  AccelStepper.cpp  AccelStepper.h  Buttons.cpp  Buttons.h  CMakeLists.txt  Doxyfile  MM-control-01.atsln  MM-control-01.hex.in  MM-control-01.vcxproj  MultiStepper.cpp  MultiStepper.h  README.md  build.sh  config.h  main.cpp  mmctl.cpp  motion.cpp  motion.h  permanent_storage.cpp  permanent_storage.h  set_fuses.sh  stepper.cpp  stepper.h  test.sh  tmc2130.c  tmc2130.h  version.h
ArduinoLib/: ArduinoLib.atsln  ArduinoLib.componentinfo.xml  ArduinoLib.cppproj  main.cpp
ArduinoLib/Debug/: CDC.d  HardwareSerial.d  HardwareSerial0.d  HardwareSerial1.d  HardwareSerial2.d  HardwareSerial3.d  IPAddress.d  Makefile  PluggableUSB.d  Print.d  Stream.d  Tone.d  USBCore.d  WInterrupts.d  WMath.d  WString.d  abi.d  hooks.d  main.d  makedep.mk  new.d  wiring.d  wiring_analog.d  wiring_digital.d  wiring_pulse.d  wiring_shift.d
MM-control-01/: Buttons.cpp  Buttons.h  MM-control-01.componentinfo.xml  MM-control-01.cppproj  MM-control-01.vcxproj  MM-control-01.vcxproj.filters  abtn3.c  abtn3.h  config.h  configuration_FANTAv1.h.in  configuration_MMUv2.h.in  diag.c  diag.h  dirty.h  fastio.h  main.cpp  main.h  mmctl.cpp  mmctl.h  motion.cpp  motion.h  permanent_storage.cpp  permanent_storage.h  pins.c  pins.h  shr16.c  shr16.cpp  shr16.h  spi.c  spi.h  stepper.cpp  stepper.h  timer.h  tmc2130.c  tmc2130.cpp  tmc2130.h  twi.h  uart.cpp  uart.h  version.h  (+1 more)
MM-control-01/Arudino/: ErriezTM1637.cpp  ErriezTM1637.h
MM-control-01/Debug/: Buttons.d  MM-control-01.elf  MM-control-01.hex  MM-control-01.lss  MM-control-01.map  MM-control-01.srec  Makefile  abtn3.d  adc.d  diag.d  main.d  makedep.mk  mmctl.d  motion.d  permanent_storage.d  shr16.d  spi.d  tmc2130.d  twi.d  uart.d
MM-control-01/Debug/Arudino/: CDC.d  ErriezTM1637.d  HardwareSerial.d  HardwareSerial0.d  HardwareSerial1.d  HardwareSerial2.d  HardwareSerial3.d  IPAddress.d  PluggableUSB.d  Print.d  Stream.d  Tone.d  USBCore.d  WInterrupts.d  WMath.d  WString.d  abi.d  hooks.d  main.d  new.d  wiring.d  wiring_analog.d  (+3 more)
Tests/: CMakeLists.txt  mmctl.h  permanent_storage_test.cpp
cmake/: GetGitRevisionDescription.cmake
firmware/: MM-control-01.hex
src/: config.h
(+1 files in other folders)
